# pythonrunscript

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml  ruff.toml
examples/: clicker.py  example-requirements.py  example-requirements2.py  example-script.py  example-script2.py
examples/fasthtml-examples/: note.txt
examples/fasthtml-examples/chess/: chess_app.py
examples/fasthtml-examples/h2f/: main.py
examples/fasthtml/adv_app/: main.py
examples/fasthtml/h2f/: main.py
examples/fasthtml/h2x/: .sesskey  main.py
examples/fasthtml/todo2/: .sesskey  main.py
examples/fasthtml/todo2/data/: utodos.db
notes/: README.org  log-python-script.org
notes/processtest/: printer.py  printerfail.py  runner.py
notes/test-scripts/mdfence/: testscript-Conda  testscript-CondaYML  testscript-Nodeps  testscript-Pip  testscript-Pip-broken  testscript-Pip2  testscript-PipConda
pythonrunscript/: __init__.py  __main__.py  pythonrunscript.py
tests/: run_conda.py  run_ffmpeg.py  run_python3.py  test_parse_dependencies.py
