[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonrunscript"
version = "0.2.0"
authors = [
  { name="Alexis Gallagher", email="alexis@alexisgallagher.com"},
]
description = "pythonrunscript runs scripts installing their dependencies in cached, isolated environments."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.9.6"
keywords = ["scripting"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = []

[tool.setuptools]
packages = ["pythonrunscript"]

[project.urls]
Homepage = "https://github.com/AnswerDotAI/pythonrunscript"
Issues = "https://github.com/AnswerDotAI/pythonrunscript/issues"

[project.scripts]
"pythonrunscript" = "pythonrunscript.pythonrunscript:main"

[project.optional-dependencies]
dev = ["pytest","tomlkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --import-mode=importlib"
pythonpath = "."
